--- a/src/app/components/world-flags-map/world-flags-map.component.html
+++ b/src/app/components/world-flags-map/world-flags-map.component.html
@@ -7,7 +7,7 @@
      [style.width.px]='_wholeWidth'
      [style.height.px]='_wholeHeight'>
 
-    <div *ngFor='let a2Country of _countriesKeys'
+    <div *ngFor='let a2Country of countriesKeys'
         [style.top.px]='_getCountryTop(a2Country)'
         [style.left.px]='_getCountryLeft(a2Country)'
         [style.line-height.px]='13'
