--- a/src/app/components/world-flags-map/world-flags-map.component.html
+++ b/src/app/components/world-flags-map/world-flags-map.component.html
@@ -1,7 +1,24 @@
-<input 
-    type='button'  
-    (click)='_onBestResolution()'
-    value='Best Resolution' />
+<button type="button" 
+        class="btn btn-info" 
+        (click)='_onZoomIn()'
+        title='Zoom In'>
+    <span class="glyphicon glyphicon-zoom-in"></span>
+</button>    
+
+<button type="button" 
+        class="btn btn-info" 
+        (click)='_onZoomOut()'
+        title='Zoom Out'>
+    <span class="glyphicon glyphicon-zoom-out"></span>
+</button>    
+
+<button type="button" 
+        class="btn btn-info" 
+        (click)='_onBestResolution()'
+        title='Best Resolution'>
+        
+    <span class="glyphicon glyphicon-fullscreen"></span>
+</button>    
 
 <div class='world'
      [style.width.px]='_wholeWidth'
