maint - fix countries search  integration - 'change' is not allowed name for component output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,7 +59,7 @@
 
             <div class='search-container'>
                 <countries-search
-                    (change)='_onSearchChange($event)'>
+                    (search)='_onSearchChange($event)'>
                 </countries-search>
             </div>
         </section>
