update package json
bump
minor fix

--- a/src/app/modules/country-card/components/country-details/country-details.component.html
+++ b/src/app/modules/country-card/components/country-details/country-details.component.html
@@ -13,8 +13,9 @@
 
     <div *ngIf='!isShrinkMode'>
 
-        <a [hidden]='true' [href]='alpha2 | a2ToWikiLink'
-            target="_blank">
+        <a [hidden]='true' 
+           [href]='alpha2 | a2ToWikiLink'
+           target="_blank">
             
             <i class="fa fa-wikipedia-w" aria-hidden="true"></i>
         </a>
