--- a/src/app/modules/search/components/countries-search/countries-search.component.html
+++ b/src/app/modules/search/components/countries-search/countries-search.component.html
@@ -1,5 +1,5 @@
 <template #countryTemplate let-countryKeyVal="item">
-    <app-country-flag [alpha2]='countryKeyVal.key'></app-country-flag>
+    <country-flag [alpha2]='countryKeyVal.key'></country-flag>
     <h5>{{ countryKeyVal.value.name.common }}</h5>
 </template>
 
