--- a/src/app/modules/world-map/components/world-flags-map/world-flags-map.component.html
+++ b/src/app/modules/world-map/components/world-flags-map/world-flags-map.component.html
@@ -30,10 +30,10 @@
         [style.line-height.px]='13'
         class='country-flag-container'>
         
-        <app-country-flag 
+        <country-flag 
                 [alpha2]='a2Country' 
                 [height]='13' 
                 [width]='13'>
-        </app-country-flag>
+        </country-flag>
     </div>
 </div>
