--- a/src/app/modules/country-card/components/countries-bar/countries-bar.component.html
+++ b/src/app/modules/country-card/components/countries-bar/countries-bar.component.html
@@ -1,9 +1,9 @@
 <div *ngIf='a2Countries.length === 0' class='no-countries-message'>There are no countries</div>
 
-<app-country-flag 
+<country-flag 
     *ngFor='let a2 of a2Countries' 
     [alpha2]='a2' 
     [height]='flagHeight'
     [width]='flagWidth'
     (flagClick)='_onFlagClick($event)'>
-</app-country-flag>
+</country-flag>
